--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -8,3 +8,6 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$white: rgb(255, 255, 255);
+$dark-orange: #da552f;
+$navbar-white: #E6E6E6;
