--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -4,6 +4,7 @@
   background-size: cover !important;
   background-position: center;
   color: $white;
+  margin: 25px;
   position: relative;
 }
 .card-user {
