--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $light-gray;
+  background-color: #F5F5F5;
   display: flex;
   align-items: center;
   justify-content: space-between;
