--- a/source/flats/show.html.erb
+++ b/source/flats/show.html.erb
@@ -39,12 +39,12 @@
         <div class="flat-description">
           <h3>About this flat</h3>
           <p>This one bedroom studio lodges 2 people (there's 1 double bed) it is located in the city center, in a calm traditional residential area near city´s main Avenue - 3 minutes walk from Sacré Coeur.</p>
+          <hr>
         </div>
       </div>
-      <hr>
     </div>
 
-    <div class="row">
+    <div class="row row-middle">
       <div class="col-xs-12 col-sm-2 col-sm-offset-1">
         <div class="flat-space">
           <p>The Space</p>
@@ -60,10 +60,13 @@
         <p>Beds: <strong>1</strong></p>
         <p>Property Type: <strong>Apartment</strong></p>
       </div>
-      <hr>
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+
+        <hr>
+      </div>
     </div>
 
-    <div class="row">
+    <div class="row row-last">
       <div class="col-xs-12 col-sm-2 col-sm-offset-1">
         <div class="flat-amenities">
           <p>Amenities</p>
