--- a/source/stylesheets/layouts/_flat.scss
+++ b/source/stylesheets/layouts/_flat.scss
@@ -36,19 +36,37 @@
 }
 .flat-info-container {
   background-color: #F5F5F5;
-  border-top: 1px solid #797272;
+  border-top: 2px solid #EDEDED;
   font-size: 15px;
 }
 .row-owner {
   margin: 20px;
 }
-.flat-description p {
-  text-align: justify;
-}
-.flat-line {
-  border-top: 1px solid #A0A099;
+.flat-description {
+  p {
+    text-align: justify;
+  }
+  h3 {
+    font-size: 20px;
+  }
 }
 hr {
   margin: 25px 0;
-  border-top: 1px solid #797272;
+  border-top: 1px solid #EDEDED;
+}
+.row-flat {
+  margin-top: 30px;
+}
+.row-middle {
+  p {
+    color: #797272;
+    font-size: 13px;
+  }
+}
+.row-last {
+  p {
+    color: #797272;
+    font-size: 13px;
+  }
+  margin-bottom: 30px;
 }
